# my_tinder_clone

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
common/: profile.py  (+2 more)
profile-service/: .dockerignore  .env.template  Dockerfile  docker-compose.yml  main.py  pyproject.toml
profile-service/alembic/: env.py
profile-service/alembic/versions/: 2025_02_20_1357-8f4f09294a27_create_user_table.py  2025_02_20_1428-d196c6abc4f1_create_user_table.py  2025_02_20_1443-18c3e1eb08c3_create_user_table.py  2025_02_21_1402-65268fdfb292_create_profile.py  2025_02_21_1403-4681d44e8f2a_create_preference.py  2025_02_21_1406-da6d63b61a64_create_photo.py  2025_02_21_1743-dc3407f2247d_remove_username_in_profile.py  2025_02_21_1746-832cc334bd7e_create_user_model.py  2025_02_21_1803-2dda311b5bda_update_foreighkey_in_profile_preference_.py  2025_02_21_1827-673b86476717_add_created_updated_at_to_user.py  2025_02_25_1241-592bba9ec4b5_add_timezone_to_db.py  2025_02_25_1321-98d532615b77_create_db.py
profile-service/api/: deps.py  main.py  profiles.py  users.py
profile-service/api/api_v1/: users.py
profile-service/app/: exception_handler.py  main.py  prestart.sh
profile-service/app/alembic/: env.py
profile-service/app/alembic/versions/: 2025_03_03_1606-76fc4c1c83cb_prerence_1to1_with_profile_not_with_user.py  2025_03_19_1500-19ff2915d9c0_create_db.py
profile-service/app/api/: deps.py  main.py  preference.py  profiles.py  users.py
profile-service/app/application/schemas/: preference.py  profile.py  user.py
profile-service/app/application/services/: preference.py  profile.py  user.py
profile-service/app/config/: settings.py
profile-service/app/core/: config.py
profile-service/app/core/models/: photo.py  preference.py  profile.py  user.py
profile-service/app/core/schemas/: profile.py
profile-service/app/crud/: preferences.py  profiles.py  users.py
profile-service/app/domain/: enums.py  exceptions.py
profile-service/app/domain/models/: photo.py  preference.py  profile.py  user.py
profile-service/app/domain/repositories/: preference.py  profile.py  user.py
profile-service/app/infrastructure/: middleware.py
profile-service/app/infrastructure/db/: db_helper.py  db_models.py
profile-service/app/infrastructure/kafka/: init.py  producer.py
profile-service/app/infrastructure/mappers/: preference.py  user.py
profile-service/app/infrastructure/repositories_impl/: preference.py  profile.py  user.py
profile-service/app/presentation/dependencies/: db_session.py  preference.py  profile.py  user.py
profile-service/app/presentation/mappers/: profile.py  user.py
profile-service/app/presentation/routes/: main.py  preference.py  profiles.py  user.py
profile-service/app/services/: kafka_producer.py  preference.py  profile.py
profile-service/app/use_cases/: preference.py  profile.py  user.py
profile-service/app/utils/: calc_distance.py  kafka_helper.py  logging.py
profile-service/app_new/: main.py
profile-service/app_new/config/: settings.py
profile-service/core/: config.py
profile-service/core/models/: __init__.py  base.py  db_helper.py  photo.py  preference.py  profile.py  user.py
profile-service/core/schemas/: profile.py  user.py
profile-service/crud/: profiles.py  users.py
profile-service/models/: __init__.py  base.py  db_helper.py  user.py
profile-service/tests/integration/: conftest.py  docker-compose.yml  test_user.py
profile-service/tests/unit/: test_preference_use_case.py  test_profile_use_case.py  test_user_use_case.py
profile-service/utils/fake_data/: create_profiles.py  create_users.py  fake_data_generation.py  main.py
(+147 files in other folders)
